@@ -1,8 +1,43 @@
-[general]
+[wdd]
 player=Player
 enemy=Enemy
 all=All
 welcome-msg=[font=default-large-bold][color=210, 117, 36]Welcome to Weasel's Demolition Derby![/color][/font]\nIf this is your first time playing it will be worth while reading the Tips-And-Tricks.\nHave fun and let there be destruction!
+player-lost=[font=default-large-bold][color=255, 0, 0]Player lost![/color][/font]
+player-won=[font=default-large-bold][color=0, 1, 0]Player Won![/color][/font]
+nobody-won=[font=default-large-bold][color=255, 0, 0]Nobody won this round![/color][/font]
+
+player-lost-rand-1=[color=36, 204, 210]__1__[/color] bit the dust!
+player-lost-rand-2=[color=36, 204, 210]__1__[/color] is no more!
+player-lost-rand-3=[color=36, 204, 210]__1__[/color] is sleeping with the fishes!
+player-lost-rand-4=[color=36, 204, 210]__1__[/color] was not worthy!
+player-lost-rand-5=[color=36, 204, 210]__1__[/color] experienced kinetic energy!
+player-lost-rand-6=[color=36, 204, 210]__1__[/color] was killed by [Intentional Game Design]!
+player-lost-rand-7=[color=36, 204, 210]__1__[/color] blew up!
+player-lost-rand-8=[color=36, 204, 210]__1__[/color] has met a fiery end!
+player-lost-rand-9=[color=36, 204, 210]__1__[/color] is pushing up the daisies!
+player-lost-rand-10=[color=36, 204, 210]__1__[/color] joined the great Worm in the sky!
+player-lost-rand-11=[color=36, 204, 210]__1__[/color] met their demise!
+player-lost-rand-12=[color=36, 204, 210]__1__[/color] is knocking on heaven's door!
+player-lost-rand-13=[color=36, 204, 210]__1__[/color] has turned up their toes!
+player-lost-rand-14=[color=36, 204, 210]__1__[/color] is wondering what went wrong!
+player-lost-rand-15=[color=36, 204, 210]__1__[/color] is saying hi to Elvis for us!
+player-lost-rand-16=[color=36, 204, 210]__1__[/color] could take no more!
+player-lost-rand-17=[color=36, 204, 210]__1__[/color] needs to renew their drivers license!
+player-lost-rand-18=[color=36, 204, 210]__1__[/color] forgot how to drive!
+player-lost-rand-19=[color=36, 204, 210]__1__[/color] was overwhelmed!
+player-lost-rand-20=[color=36, 204, 210]__1__[/color] was terminated!
+
+player-won-rand-1=[color=36, 204, 210]__1__[/color] is victorious!
+player-won-rand-2=[color=36, 204, 210]__1__[/color] won this game!
+player-won-rand-3=[color=36, 204, 210]__1__[/color] defeated their foes!
+player-won-rand-4=[color=36, 204, 210]__1__[/color] survived the longest!
+player-won-rand-5=[color=36, 204, 210]__1__[/color] is the captain now!
+player-won-rand-6=[color=36, 204, 210]__1__[/color] got the final laugh!
+player-won-rand-7=[color=36, 204, 210]__1__[/color] is teh Winrar!
+player-won-rand-8=[color=36, 204, 210]__1__[/color] might have too much free time after all!
+player-won-rand-9=[color=36, 204, 210]__1__[/color] took this round!
+player-won-rand-10=[color=36, 204, 210]__1__[/color] is the fastest and furiousest!
 
 [entity-name]
 wdd-car-static=Demolition Car
