@@ -1,6 +1,8 @@
 ---------------------------------------------------------------------------------------------------
 Version: 0.3.2
 Date: ??.??.????
+  Features:
+    - Show messages whe player loses or wins to other players in same lobby.
   Changes:
     - Removed hacky workaround after fix in basegame (100508).
   Bugfixes:
